<resources>
    <string name="app_name">Tram way Rabat</string>

    <string name="splash_title"></string>
    <string name="splash_loading">Loading</string>
    <string name="splash_info">Tram Way Rabat</string>
    <string name="locmaison">Localisation maison</string>
    <string name="them">Thème de l\'application</string>
    <string name="home">Home</string>
    <string name="station">Stations</string>
    <string name="dis">Distance Entre Stations</string>
    <string name="google_maps_key">AIzaSyCFUjPPiH-pqf5lQwvc2vFuXKYK6C84hyg</string>
    <string name="listes">Liste des stations</string>
    <string name="calcult">Calcul de trajet</string>
    <string name="tarif">Tarifs</string>
    <string name="abonn">Abonnement</string>
    <string name="ticket">Ticket et infraction</string>
    <string name="deplacer">Se Déplacer</string>
    <string name="horaire">Horaire</string>
    <string name="sited">Plan des lignes</string>
    <string name="listespro">Liste des stations les plus proches</string>
    <string name="autre">Autre</string>
    <string name="contact">Contact</string>
    <string name="sta">Stations</string>
    <string name="sitetram">www.tram-way.ma</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_station">ActivityStation</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="devlepedby">IAO2021</string>
    <string name="setting">Settings</string>
    <string name="warning_text">This app directed by  us  And its not Official If we infringe copyright let us know and will be removed as soon as possible Thank You !</string>
    <!--Contact-->
    <string name="txtallo">Allo Tram : 0537 86 32 32</string>
    <string name="txtstan">Standard : 0537 86 94 00</string>
    <string name="txtmail">recrutement.transdevrabat@transdev.com</string>
    <string name="formu">Formulaire de contact</string>
    <string name="title_activity_maps">Map</string>
    <!--Acceuil-->
    <string name="tick">Ticket et Infraction</string>
    <string name="horair">Horaire</string>
    <string name="carte">Carte Interactive</string>
    <string name="conta">Contactez Nous</string>
</resources>