<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns="http://schemas.android.com/apk/res-auto"
    tools="http://schemas.android.com/tools"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>

        <item

            android:id="@+id/nav_liststa"
            android:title="@string/station"
            android:icon="@drawable/lista_icon"/>

        <item
            android:id="@+id/nav_station"
            android:title="@string/dis"
            android:icon="@drawable/position"/>
    </group>
    <group android:checkableBehavior="single">
        <item  android:title="@string/tarif">

            <menu>

                <item android:id="@+id/abonn"
                    android:title="Abonnement"
                    android:icon="@drawable/abonn_icon"/>

                <item android:id="@+id/ticket"
                    android:title="Ticket et Infractions"
                    android:icon="@drawable/abonn_icon"/>
            </menu>
        </item>

    </group>
    <group android:checkableBehavior="single">
        <item  android:title="@string/deplacer">
            <menu>
        <item
            android:id="@+id/nav_horaire"
            android:title="@string/horaire"
            android:icon="@drawable/horaire_icon"/>

        <item
            android:id="@+id/nav_plan_de_lignes"
            android:title="@string/sited"
            android:icon="@drawable/info_icon"/>
            </menu>
        </item>
    </group>




            <group android:checkableBehavior="single">
                <item
                    android:title="@string/autre">
                <menu>
                <item
                    android:id="@+id/nav_setting"
                    android:title="Setting"
                    android:icon="@drawable/setting_icon"/>

                <item
                    android:id="@+id/nav_contact"
                    android:title="@string/contact"
                    android:icon="@drawable/contact_icon"/>
                <item
                android:id="@+id/nav_logout"
                android:title="Logout"
                android:icon="@drawable/logout_icon"/>
                </menu>
                </item>
            </group>


 <!--<item
        android:title="Communication">
    <menu>
        <item
            android:id="@+id/nav_share"
            android:title="Share"
            android:icon="@drawable/share_icon" />

        <item
            android:id="@+id/nav_rate"
            android:title="Rate Us"
            android:icon="@drawable/rate_icon" />

    </menu>
    </item>-->

</menu>