<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.MainActivity"

    tools:openDrawer="start"
    android:fitsSystemWindows="true">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="@color/pink"/>

        <RelativeLayout
        android:id="@+id/con1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
            android:background="@drawable/tram1"
        android:gravity="bottom"
        android:padding="10dp"
        android:orientation="vertical"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">
                <!--l1-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_140sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@+id/rel_music"
                        android:orientation="vertical"
                        android:background="@drawable/ic_card">

                <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="@dimen/_50sdp"
                            android:layout_marginTop="@dimen/_19sdp"
                            android:fontFamily="@font/arial"
                            android:src="@drawable/ttram"/>
                        <TextView
                            android:id="@+id/t1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_marginLeft="@dimen/_15sdp"
                            android:fontFamily="@font/arial"
                            android:text="@string/tick"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp"

                            />

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/rel_music"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:gravity="center"
                        android:layout_alignParentRight="true">

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:orientation="vertical"
                            android:background="@drawable/ic_card">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="@dimen/_55sdp"
                                android:layout_marginTop="@dimen/_20sdp"

                                android:fontFamily="@font/arial"
                                android:src="@drawable/time" />
                            <TextView
                                android:id="@+id/t2"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:layout_marginLeft="@dimen/_50sdp"

                                android:fontFamily="@font/arial"
                                android:text="@string/horair"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_13sdp"
                               />

                        </LinearLayout>

                    </RelativeLayout>

                </RelativeLayout>
                <!--finl1-->

               <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_140sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/rel_music"
                    android:orientation="vertical"
                    android:background="@drawable/ic_card">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_19sdp"
                        android:fontFamily="@font/arial"
                        android:src="@drawable/map" />

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:fontFamily="@font/arial"
                        android:text="@string/carte"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"

                        />


                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rel_music"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:gravity="center"
                    android:layout_alignParentRight="true">

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:orientation="vertical"
                        android:background="@drawable/ic_card">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="@dimen/_19sdp"
                            android:fontFamily="@font/arial"
                            android:layout_gravity="center"
                            android:src="@drawable/message" />
                        <TextView
                            android:id="@+id/t4"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_marginLeft="@dimen/_30sdp"
                            android:fontFamily="@font/arial"
                            android:text="@string/conta"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp"
                            />

                    </LinearLayout>

                </RelativeLayout>

            </RelativeLayout>
            </LinearLayout>



        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu" />


</androidx.drawerlayout.widget.DrawerLayout>

